# Terraria-2.0

./: .gitmodules  CMakeLists.txt
dependencies/simplex-noise/: CMakeLists.txt
game/: CMakeLists.txt
game/assets/shaders/: instanced-widget.vert
game/include/: Terraria.h
game/source/: Terraria.cpp  main.cpp
lib/entity/: CMakeLists.txt
lib/entity/include/: Entity.h  EntityManager.h  LivingEntity.h
lib/entity/source/: Entity.cpp  EntityManager.cpp  LivingEntity.cpp
lib/map/: CMakeLists.txt
lib/map/include/: Block.h  Chunck.h  Map.h
lib/map/source/: Block.cpp  Chunck.cpp  Map.cpp
lib/terraria-game/: CMakeLists.txt
lib/terraria-game/include/: TerrariaGameMode.h  TerrariaGameState.h  TerrariaPlayerState.h
lib/terraria-game/source/: TerrariaGameMode.cpp  TerrariaGameState.cpp  TerrariaPlayerState.cpp
lib/terraria-world/: CMakeLists.txt
lib/terraria-world/include/: TerrariaWorld.h
lib/terraria-world/source/: TerrariaWorld.cpp
lib/texture-manager/: CMakeLists.txt
lib/texture-manager/include/: TextureManager.h
lib/texture-manager/source/: TextureManager.cpp
